--- a/package.json
+++ b/package.json
@@ -6,20 +6,35 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "prettier": "prettier"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "class-variance-authority": "^0.4.0",
     "daisyui": "^2.47.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^7.0.0-beta.31",
+    "@storybook/addon-essentials": "^7.0.0-beta.31",
+    "@storybook/addon-interactions": "^7.0.0-beta.31",
+    "@storybook/addon-links": "^7.0.0-beta.31",
+    "@storybook/react": "^7.0.0-beta.31",
+    "@storybook/react-vite": "^7.0.0-beta.31",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "babel-loader": "^8.3.0",
+    "storybook": "^7.0.0-beta.31",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
