--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prettier": "prettier"
+    "prettier": "prettier",
+    "test": "vitest"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
@@ -30,12 +31,17 @@
     "@storybook/react": "^7.0.0-beta.31",
     "@storybook/react-vite": "^7.0.0-beta.31",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.28.1",
     "babel-loader": "^8.3.0",
+    "jsdom": "^21.1.0",
     "storybook": "^7.0.0-beta.31",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.28.1"
   }
 }
