--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-  "name": "jm-ui",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@jmarc00s/jm-ui",
+  "private": false,
+  "version": "0.0.6",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jmarc00s/jm-ui"
+  },
+  "author": "João Marcos Santos",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/jm-ui.es.js",
+      "require": "./dist/jm-ui.umd.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/jm-ui.umd.js",
+  "module": "./dist/jm-ui.es.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -21,6 +39,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4"
+  },
+  "peerDependencies": {
+    "daisyui": "^2.42.1",
+    "react": ">=16",
+    "react-dom": ">=16",
+    "tailwindcss": "^3.2.4",
+    "class-variance-authority": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -42,6 +67,8 @@
     "storybook": "^7.0.0-beta.31",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-dts": "^1.7.1",
+    "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.1"
   }
 }
