--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build-storybook": "storybook build",
     "prettier": "prettier",
     "test": "vitest",
-    "coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
