--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prettier": "prettier src/**/*.{js,jsx,ts,tsx} --check",
+    "prettier:fix": "prettier src/**/*.{js,jsx,ts,tsx} --write",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ci": "vitest run",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
@@ -69,11 +71,14 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.28.1",
     "babel-loader": "^8.3.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
