--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,9 @@ jobs:
           node-version: 16.x
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm test
+      - run: |
+         export NODE_OPTIONS="--max_old_space_size=4096"
+         npm test
       - run: npm run build
       - run: npm publish --access=public
         env:
