feat: add currency input component

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "singleQuote": true,
   "semi": true,
-  "endOfLine": "lf",
+  "endOfLine": "crlf",
   "tabWidth": 2,
   "trailingComma": "all"
 }
