--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "react/jsx-filename-extension": 0,
     "import/prefer-default-export": 0,
     "indent": "off",
-    "@typescript-eslint/indent": "off"
+    "@typescript-eslint/indent": "off",
+    "linebreak-style": "off"
   }
 }
