--- a/package.json
+++ b/package.json
@@ -47,15 +47,13 @@
     "daisyui": "^3.5.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
-    "react": ">=16",
-    "react-dom": ">=16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-number-format": "^5.2.2",
     "tailwindcss": "^3.2.4"
   },
   "peerDependencies": {
     "class-variance-authority": "^0.4.0",
-    "react": ">=16",
-    "react-dom": ">=16",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
@@ -71,8 +69,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^3.0.0",
