fix: fix peer dependencies

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "peerDependencies": {
     "class-variance-authority": "^0.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
